This is what actually fixed the horizontal scroll behavior

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 
 html { 
     scroll-behavior: smooth; /* Used to give a slower scroll when clicking reference buttons */
+    overflow-x: hidden;
 }
 
 :root {
@@ -24,8 +25,9 @@ body { /* This removes the space in the sections if padding and margin are not z
     margin: 0px;
     font-family: "Roboto";
     box-sizing: border-box;
-    min-width: 320px;
+    width: 100%;
     overflow-x: hidden;
+    position: relative;
 }
 
 /* THIS CONTAINS THE SIGN UP SHOWUP MENU STYLES */
